# FastStack

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  version-bump.yml
cmake/: faststackConfig.cmake.in  seraphConfig.cmake.in
include/: locks.hpp
include/faststack/: queue.hpp  stack.hpp
include/seraph/: IMPL_DESIGN.md  queue.hpp  ringbuffer.hpp  stack.hpp
tests/: basic_compile_test.cpp  queue_performance_test.cpp  stack_performance_test.cpp
